--- a/.env.example
+++ b/.env.example
@@ -40,7 +40,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=ap-northeast-1
-AWS_BUCKET=
+AWS_BUCKET=twitter-backend-dev
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
